syntax = "proto3";
import "google/protobuf/any.proto";

package serializable;

message Packet {
		OpCode opCode = 1;
		google.protobuf.Any data = 2;

    enum OpCode {
				Invalid = 0;

				// connection related
				ClientDisconnect = 100;
				ClientMAC = 101;

				// game server related
        SeatConfiguration = 200;
        Seat = 201;
        RunSimulation = 202;
				ReloadSimulation = 203;
    }
}

message SeatConfiguration {
    repeated Seat seats = 1;
}

message RunSimulation {
    int32 tick = 1;
}

message ClientMAC {
    string MAC = 1;
}

message Context3D {
    int32 tick = 1;
		bool client = 2;
    repeated Transform transforms = 3;
    repeated Rigidbody3D rigidBodies = 4;
}

message Context2D {
    int32 tick = 1;
		bool client = 2;
    repeated Transform transforms = 3;
    repeated Rigidbody2D rigidBodies = 4;
}

message Transform {
    string ID = 1;
    Vector3 position = 2;
    Quaternion rotation = 3;
    // Prefab Prefab = 2;
}
message Rigidbody2D {
    string ID = 1;
    Vector2 position = 2;
    Quaternion rotation = 3;
    Vector2 velocity = 4;
}

message Rigidbody3D {
    string ID = 1;
    Vector3 position = 2;
    Quaternion rotation = 3;
    Vector3 velocity = 4;
}

message Vector2 {
    float x = 1;
    float y = 2;
}

message Vector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Quaternion {
    float w = 1;
    float x = 2;
    float y = 3;
    float z = 4;
}

message Seat {
    int32 owner = 1;
    string GUID = 2;
}

// OLD VERSION STUFF STARTS HERE

//message OldPacket {
//    Header.OpCode opCode = 1;
//    google.protobuf.Any data = 2;
//    string cid = 3;
//}
//
//message ClientSeat {
//    // CID of client that is assigned to this seat
//    string owner = 1;
//    // GUID of the object this seat is on
//    string guid = 2;
//}
//
//message GameServerOnline {
//    string secret = 1;
//    string region = 2;
//    int32 capacity = 3;
//}
//
//// message Context {
////    repeated GameObject transforms = 1;
////    repeated Rigidbody rigidBodies = 2;
////}
//
//message GameObject {
//    string ID = 1;
//    Prefab Prefab = 2;
//    Vector2 position = 3;
//    float rotation = 4;
//}
//
//
//message Velocity {
//    string ID = 1;
//    float x = 2;
//    float y = 3;
//}
//
//message Position {
//    string ID = 1;
//    float x = 2;
//    float y = 3;
//}
//
//message Force {
//    string ID = 1;
//    float x = 2;
//    float y = 3;
//    ForceMode forceMode = 4;
//    enum ForceMode {
//        Force = 0;
//        Impulse = 1;
//    }
//}
//
//
//
//enum Prefab {
//    Invalid = 0;
//    DemoBox = 1;
//}